--- a/components/upload/index.less
+++ b/components/upload/index.less
@@ -1,1 +1,11 @@
 @import '../style/style.less';
+
+// picture-card
+
+.ant-upload.ant-upload-select-picture-card > .ant-upload {
+  background-color: @bg-page;
+  border: 1px dashed @border-component;
+  &:hover {
+    border-color: @primary-color-hover;
+  }
+}
