--- a/components/select/index.less
+++ b/components/select/index.less
@@ -182,8 +182,7 @@
 // error
 .ant-select-status-error.ant-select:not(.ant-select-disabled):not(.ant-select-customize-input)
   .ant-select-selector {
-  border-color: #fcbbc0 !important;
-  box-shadow: 0 0 0 2px #fcbbc0;
+  border: 1.5px solid #fcbbc0 !important;
   &:hover {
     border-color: #ffebec !important;
     box-shadow: 0 0 0 2px #ffebec;
@@ -195,13 +194,13 @@
   border-color: @text-color-error !important;
 }
 
+// warning
 .ant-select-status-warning.ant-select:not(.ant-select-disabled):not(.ant-select-customize-input)
   .ant-select-selector {
-  border-color: #f2dca0 !important;
-  box-shadow: 0 0 0 2px #f2dca0;
+  border: 1.5px solid #f2dca0 !important;
   &:hover {
-    border-color: #ffebec !important;
-    box-shadow: 0 0 0 2px #ffebec;
+    border-color: #faf4e1 !important;
+    box-shadow: 0 0 0 2px #faf4e1;
   }
 }
 
