--- a/components/breadcrumb/index.less
+++ b/components/breadcrumb/index.less
@@ -2,11 +2,11 @@
 
 .ant-breadcrumb-separator {
   display: inline-block;
-  color: #8792a4;
+  color: @text-color-3;
   transform: scale(0.9, 0.7) rotate(7deg);
 }
 .ant-breadcrumb-link a {
-  color: #8792a4;
+  color: @text-color-3;
   font-weight: 400;
 }
 .ant-breadcrumb li:last-child {
