--- a/components/select/index.less
+++ b/components/select/index.less
@@ -12,6 +12,7 @@
 .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
   box-sizing: border-box;
   height: 40px;
+  line-height: 38px;
 }
 
 .ant-select-single .ant-select-selector .ant-select-selection-item,
@@ -50,6 +51,16 @@
 }
 
 // large
+
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-item,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input)
+  .ant-select-selector
+  .ant-select-selection-placeholder,
+.ant-select-single.ant-select-lg:not(.ant-select-customize-input) .ant-select-selector:after {
+  line-height: 56px;
+}
 .ant-select-single.ant-select-lg:not(.ant-select-customize-input)
   .ant-select-selector
   .ant-select-selection-placeholder,
@@ -87,6 +98,7 @@
 }
 .ant-select-single.ant-select-sm:not(.ant-select-customize-input) .ant-select-selector {
   height: 32px;
+  line-height: 30px;
 }
 
 .ant-select-single.ant-select-sm:not(.ant-select-customize-input)
@@ -149,11 +161,14 @@
     padding: 4px 7px;
   }
   .ant-select-selection-item {
+    height: 26px;
+    line-height: 24px;
     border-color: @theme-lightcolor-hover;
     border-radius: 5px;
     .ant-select-selection-item-content {
       margin-right: 8px;
       color: @primary-color;
+      font-size: 12px;
     }
     .ant-select-selection-item-remove {
       color: #80b0ff;
