--- a/components/input/index.less
+++ b/components/input/index.less
@@ -17,9 +17,9 @@
 .ant-input.ant-input-lg {
   border-radius: 10px;
 }
-.ant-input-group > .ant-input.ant-input-lg {
-  border-radius: 0px 5px 5px 0px;
-}
+// .ant-input-group > .ant-input.ant-input-lg {
+//   border-radius: 0px 5px 5px 0px;
+// }
 .ant-input.ant-input-lg,
 .ant-input-group > .ant-input.ant-input-lg {
   padding: 15.5px 12px;
@@ -95,6 +95,15 @@
   font-family: @primary-font-family;
   border-color: @input-border;
   border-radius: 5px;
+  .ant-input {
+    border-radius: 0px;
+  }
+  textarea {
+    border-radius: 5px !important;
+    &.ant-input-lg {
+      border-radius: 10px !important;
+    }
+  }
 }
 .ant-input-affix-wrapper.ant-input-affix-wrapper-sm {
   padding: 4px 12px;
@@ -184,6 +193,11 @@
   .ant-input-affix-wrapper:not(.ant-input-affix-wrapper-disabled).ant-input-affix-wrapper-borderless:hover {
   border-color: none;
   box-shadow: none;
+}
+.ant-input-affix-wrapper.ant-input-affix-wrapper-textarea-with-clear-btn,
+.ant-input-affix-wrapper.ant-input-affix-wrapper-textarea-with-clear-btn:hover {
+  border-color: none;
+  box-shadow: none !important;
 }
 .ant-input-textarea .ant-input-affix-wrapper {
   border-radius: 10px;
