fix: 根据验收走查清单微调组件样式

--- a/components/badge/index.less
+++ b/components/badge/index.less
@@ -6,9 +6,13 @@
 .ant-badge-dot {
   width: 10px;
   height: 10px;
-  // background-color: #FA3C58;
 }
-
+.ant-badge-count,
+.ant-scroll-number-custom-component,
+.ant-badge-dot,
+.ant-badge-status-dot {
+  box-shadow: 0 0 0 1.5px #fff;
+}
 .ant-badge-status-success {
   background-color: #22c777;
 }
