--- a/components/style/style.less
+++ b/components/style/style.less
@@ -97,3 +97,7 @@
 
 // 单选多选hover状态
 @radio-checkbox-hover-color: #d0ebfe;
+
+@input-normal-color-hover: rgba(165, 214, 250, 0.5);
+@input-warning-color-hover: rgba(250, 173, 20, 0.2);
+@input-error-color-hover: rgba(255, 77, 79, 0.2);
