--- a/components/inputNumber/index.less
+++ b/components/inputNumber/index.less
@@ -25,11 +25,12 @@
   border-color: @border-component;
   &:hover {
     border-color: #d0ebfe;
-    box-shadow: 0 0 0 2px rgb(24 144 255 / 20%);
+    box-shadow: 0 0 0 2px @radio-checkbox-hover-color;
   }
   &:focus,
   &.ant-input-number-focused {
     border-color: #80caff;
+    box-shadow: 0 0 0 3px @radio-checkbox-hover-color;
   }
   // +,- icon
   .ant-input-number-handler-wrap {
@@ -49,7 +50,7 @@
     .ant-input-number-handler-down-disabled {
       width: 26px;
       height: 15px;
-      background: @border-component;
+      background: @bg-page;
       border: none;
       border-radius: 3px;
       .ant-input-number-handler-up-inner,
@@ -61,6 +62,9 @@
         margin: auto;
         transform: translate(0, 0);
         svg {
+          width: 8px;
+          height: 8px;
+          transform: scale(1, 0.7);
           fill: @text-color-3;
         }
       }
@@ -74,7 +78,7 @@
     .ant-input-number-handler-up:not(.ant-input-number-handler-up-disabled):hover,
     .ant-input-number-handler-down:not(.ant-input-number-handler-down-disabled):hover {
       height: 15px !important;
-      background: @border-component-hover;
+      background: @border-component;
       svg {
         fill: @text-color;
       }
@@ -104,6 +108,13 @@
       width: 32px;
       height: 21px;
       border-radius: 5px;
+      .ant-input-number-handler-up-inner,
+      .ant-input-number-handler-down-inner {
+        svg {
+          width: 10px;
+          height: 10px;
+        }
+      }
     }
     .ant-input-number-handler-up.ant-input-number-handler-up-disabled:hover,
     .ant-input-number-handler-down.ant-input-number-handler-down-disabled:hover {
@@ -150,13 +161,21 @@
       }
     }
     &:hover {
+      background-color: @bg-container-1;
       border-color: #d0ebfe;
-      box-shadow: 0 0 0 2px rgb(24 144 255 / 20%);
+      box-shadow: 0 0 0 2px @radio-checkbox-hover-color;
+      .ant-input-number-handler-wrap {
+        background-color: @bg-container-1;
+      }
     }
     &:focus,
     &.ant-input-number-focused {
+      background-color: @bg-container-1;
       border-color: #80caff;
-      box-shadow: 0 0 0 2px rgb(24 144 255 / 20%);
+      box-shadow: 0 0 0 3px @radio-checkbox-hover-color;
+      .ant-input-number-handler-wrap {
+        background-color: @bg-container-1;
+      }
     }
   }
 }
@@ -173,31 +192,25 @@
 
 .ant-input-number-group-wrapper {
   .ant-input-number-wrapper.ant-input-number-group {
+    > :first-child,
+    .ant-input-number-group-addon {
+      border-radius: 5px 0px 0px 5px;
+    }
+    > :last-child {
+      border-radius: 0px 5px 5px 0px;
+    }
     .ant-input-number-group-addon {
       color: @text-color-1;
       background-color: @bg-page;
       border-color: @border-component;
     }
 
-    // >.ant-input-number-group-addon:first-child{
-    //   border-top-left-radius: 5px;
-    //   border-bottom-left-radius: 5px;
+    // .ant-input-number-group-addon {
+    //   border-radius: 5px 0px 0px 5px;
     // }
 
-    .ant-input-number-group-addon {
-      border-radius: 5px 0px 0px 5px;
-    }
-
-    .ant-input-number + .ant-input-number-group-addon {
-      border-radius: 0px 5px 5px 0px;
-    }
-    // .ant-input-number.ant-input-number-lg + .ant-input-number-group-addon{
-    //   border-radius: 0px 7px 7px 0px;
-    // }
-
-    // borderless后面组合dom no-border
-    // .ant-input-number.ant-input-number-borderless + .ant-input-number-group-addon{
-    //   border: none;
+    // .ant-input-number + .ant-input-number-group-addon {
+    //   border-radius: 0px 5px 5px 0px;
     // }
   }
 }
