fix: 组件样式调整

--- a/components/button/index.less
+++ b/components/button/index.less
@@ -2,6 +2,7 @@
 
 .ant-btn {
   height: 40px;
+  padding: 4px 16px;
   font-weight: 600;
 }
 
@@ -62,14 +63,22 @@
   }
 }
 
+// ghost
+.ant-btn-ghost {
+  color: #fff;
+}
+
 // small
 .ant-btn-sm {
   height: 32px;
+  padding: 4px 12px;
 }
 
 // large
 .ant-btn-lg {
   height: 58px;
+  padding: 4px 24px;
+  border-radius: 10xp;
 }
 
 // text
