--- a/components/slider/index.less
+++ b/components/slider/index.less
@@ -47,3 +47,18 @@
 .ant-slider-vertical .ant-slider-handle {
   margin-left: -8px;
 }
+
+// disabled
+.ant-slider-disabled .ant-slider-track {
+  background-color: @text-color-placeholder !important;
+}
+
+// text
+.ant-slider-mark {
+  top: 16px;
+}
+
+.ant-slider-mark-text {
+  color: @text-color-3;
+  font-size: 12px;
+}
