--- a/components/style/style.less
+++ b/components/style/style.less
@@ -4,7 +4,7 @@
 @primary-color-active: #2454e2;
 
 // >>> Success
-@success-color: #22cd7a;
+@success-color: #22c777;
 @success-color-hover: #57d998;
 @success-color-active: #1db26d;
 
