--- a/components/switch/index.less
+++ b/components/switch/index.less
@@ -10,7 +10,7 @@
 .ant-switch-checked {
   background-color: @success-color;
   &:hover {
-    box-shadow: 0 0 0 2px #c7f2da;
+    box-shadow: 0 0 0 2px #d5f2e2;
   }
 }
 
@@ -47,4 +47,14 @@
 .ant-switch-small .anticon-loading svg {
   width: 8px !important;
   height: 8px !important;
+}
+.ant-switch-inner {
+  margin: 0 8px 0 25px;
+}
+.ant-switch-checked .ant-switch-inner {
+  margin: 0 25px 0 8px;
+}
+
+.ant-switch-small .ant-switch-inner {
+  margin: 0 6px 0 18px;
 }
