--- a/components/tabs/index.less
+++ b/components/tabs/index.less
@@ -42,18 +42,39 @@
   padding: 0;
 }
 
+.ant-tabs-bottom > .ant-tabs-nav:before,
+.ant-tabs-bottom > div > .ant-tabs-nav:before,
+.ant-tabs-top > .ant-tabs-nav:before,
+.ant-tabs-top > div > .ant-tabs-nav:before {
+  display: none;
+}
+
 .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab {
   box-sizing: border-box;
   padding: 12px 24px;
   border: none;
   border-radius: 10px 10px 0 0;
+  .ant-tabs-tab-remove {
+    visibility: hidden;
+  }
+  &:hover {
+    .ant-tabs-tab-remove {
+      visibility: visible;
+    }
+  }
+}
+.ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab:not(.ant-tabs-tab-active) {
+  background-color: #fcfdff;
+  box-shadow: inset 0px -1px 0px 0px #f0f0f0;
 }
 
 .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-nav-add {
   margin-left: 4px;
   color: @text-color-3;
+  background-color: #fcfdff;
   border: none;
   border-radius: 10px 10px 0 0;
+  box-shadow: inset 0px -1px 0px 0px #f0f0f0;
   &:hover {
     color: @primary-color;
   }
