--- a/components/checkbox/index.less
+++ b/components/checkbox/index.less
@@ -21,6 +21,7 @@
     &::after {
       height: 2px;
       background-color: @bg-container-1;
+      border-radius: 1px;
     }
   }
 
@@ -91,6 +92,7 @@
   &::after {
     height: 2px;
     background-color: @bg-container-1;
+    border-radius: 1px;
   }
 }
 
@@ -142,15 +144,13 @@
 }
 
 // ant-select-tree-checkbox选中
-.ant-select-tree-checkbox-wrapper.ant-select-tree-checkbox-wrapper-checked {
-  .ant-select-tree-checkbox-checked::after {
-    border-color: @primary-color;
-    border-radius: 3px;
-  }
-  &:hover
-    .ant-select-tree-checkbox.ant-select-tree-checkbox-checked
-    .ant-select-tree-checkbox-inner {
-    border-color: @primary-color;
+.ant-select-tree-checkbox-checked::after {
+  border-color: @primary-color;
+  border-radius: 3px;
+}
+.ant-select-tree-checkbox.ant-select-tree-checkbox-checked {
+  .ant-select-tree-checkbox-inner::after {
+    border-radius: 0px 0px 2px 0px;
   }
 }
 
@@ -171,6 +171,7 @@
   &::after {
     height: 2px;
     background-color: @bg-container-1;
+    border-radius: 1px;
   }
 }
 
@@ -223,12 +224,12 @@
 }
 
 // ant-cascader-checkbox选中
-.ant-cascader-checkbox-wrapper.ant-cascader-checkbox-wrapper-checked {
-  .ant-cascader-checkbox-checked::after {
-    border-color: @primary-color;
-    border-radius: 3px;
-  }
-  &:hover .ant-cascader-checkbox.ant-cascader-checkbox-checked .ant-cascader-checkbox-inner {
-    border-color: @primary-color;
+.ant-cascader-checkbox-checked::after {
+  border-color: @primary-color;
+  border-radius: 3px;
+}
+.ant-cascader-checkbox.ant-cascader-checkbox-checked {
+  .ant-cascader-checkbox-inner::after {
+    border-radius: 0px 0px 2px 0px;
   }
 }
